syntax ="proto3";

package project;

option go_package="project";

import "google/protobuf/timestamp.proto";

message Project {
    string id = 1;
    google.protobuf.Timestamp createdTime = 2;
    google.protobuf.Timestamp updatedTime = 3;
    string name = 4;
    string desc = 5;
    string url = 6;
    string ownerID = 7;
}

message getProjectReq {
   string id = 1;
}

message getProjectRsp {
    Project result = 1;
}

message addProjectReq {
    string name = 1;
    string desc = 2;
    string url = 3;
}

message addProjectRsp {
    Project result = 1;
}

message updateProjectReq {
   Project payload = 1;
}

message updateProjectRsp {
    bool result = 1;
}

message deleteProjectReq {
   string id = 1;
}

message deleteProjectRsp {
   bool result = 1;
}

service project {
   rpc getProject(getProjectReq) returns(getProjectRsp);
   rpc addProject(addProjectReq) returns(addProjectRsp);
   rpc updateProject(updateProjectReq) returns(updateProjectRsp);
   rpc deleteProject(deleteProjectReq) returns(deleteProjectRsp);
}
